Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- updated doc on non-persistent views
Bug fixes:
~~~~~~~~~~
- DateTime Filter Widget couldn't work if from request or cookie.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- generic reRedirect method in searchview.